--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+python-dotenv = "^1.1.0"
+pillow = "^11.2.1"
+django-countries = "^7.6.1"
 
 
 [build-system]
