--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 python-dotenv = "^1.1.0"
 pillow = "^11.2.1"
 django-countries = "^7.6.1"
+ipython = "^9.2.0"
 
 
 [build-system]
